fix(client): select text align

--- a/src/index.css
+++ b/src/index.css
@@ -117,4 +117,6 @@ select {
   background-color: transparent;
   background: transparent;
   border: none;
+  text-align: right;
+  text-align-last: right;
 }
